--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,21 @@
 
     <Button
         android:id="@+id/btnAcceder"
-        android:layout_width="140dp"
-        android:layout_height="85dp"
+        android:layout_width="228dp"
+        android:layout_height="70dp"
         android:layout_marginTop="25dp"
         android:text="@string/btnAcceder"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/campoContrasena" />
+ <Button
+        android:id="@+id/btnNoCuenta"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginTop="25dp"
+        android:text="No tengo cuenta"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -94,15 +105,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
-        android:id="@+id/textoFinal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Realizado por Francisco Rodríguez Tejada"
-        android:textColor="@color/colorRealizado"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAcceder" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
